# Autonomous-Shopping-Agent-Platform

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260302_0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/agents/: deal_checker.py  decision.py  memory.py  planner.py  review_analyzer.py  types.py
apps/api/app/api/: auth.py  deps.py  feedback.py  profiles.py  router.py  runs.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: session.py
apps/api/app/middleware/: request_context.py
apps/api/app/models/: __init__.py  enums.py  feedback.py  product_snapshot.py  profile.py  run.py  run_event.py  user.py
apps/api/app/providers/: __init__.py  base.py  exceptions.py  fixture_adapter.py  mock_amazon.py  mock_bestbuy.py
apps/api/app/schemas/: __init__.py  auth.py  feedback.py  product.py  profile.py  run.py
apps/api/app/services/: event_stream.py  orchestrator.py  rate_limit.py  security.py
apps/api/data/: amazon_products.json  bestbuy_products.json
apps/api/tests/: test_decision_agent.py  test_planner_agent.py
apps/web/: .eslintrc.cjs  index.html  package.json
apps/web/src/: App.tsx  types.ts
apps/web/src/hooks/: useRunEvents.ts
apps/web/src/lib/: api.ts
docs/: README.md  architecture.md
docs/adr/: 001-orchestration-approach.md  002-streaming-choice.md  003-data-schema.md  004-background-execution.md
infra/: docker-compose.yml
